# s3sync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-16-s3sync.md
docs/superpowers/specs/: 2026-03-16-s3sync-design.md
s3sync/: cli.py  config.py  crypto.py  daemon.py  initial_sync.py  launchd.py  log.py  state.py  sync.py
tests/: conftest.py  test_config.py  test_crypto.py  test_daemon.py  test_initial_sync.py  test_state.py  test_sync.py
