[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3sync"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "watchdog>=4.0",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyrage>=1.1",
]

[project.scripts]
s3sync = "s3sync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3,sts]>=5.0",
]
